Fix sidebar colors for the dark mode

--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -1,8 +1,8 @@
 :root
     --tg-padding: 12px
-    // White theme styles
+    // Light theme styles
     --tg-color-bg-light: #f8f9fc
-    --tg-color-white: #fff
+    --tg-color-light: #fff
     --tg-color-border-default: #dee3ed
     --tg-color-text-default: #2f3237
     --tg-color-text-gray: #8f96a3
@@ -16,7 +16,7 @@
     :root
         // Dark theme styles
         --tg-color-bg-light: #2e3239
-        --tg-color-white: #111213
+        --tg-color-light: #111213
         --tg-color-border-default: #2f3237
         --tg-color-text-default: #f1f3f9
         --tg-color-text-gray: #c2c9d6
