--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -8,7 +8,7 @@ html
 
 body
     margin: 0
-    background: var(--tg-color-white)
+    background: var(--tg-color-light)
     color: var(--tg-color-text-default)
     border: 1px solid var(--tg-color-border-default)
     width: 330px
